# fast_next

./: README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/api/: admin.py  departments.py  employees.py  exports.py  imports.py  references.py
backend/core/: config.py
backend/db/: database.py  schema.sql
backend/models/: __init__.py  employee.py
backend/schemas/: __init__.py  schemas.py
backend/services/: admin.py  employees.py  events.py  exporter.py  importer.py  references.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: formStyles.module.scss  globals.css  layout.module.scss  layout.tsx  page.module.scss  page.tsx
frontend/src/app/employees/: page.tsx
frontend/src/app/employees/[id]/: page.tsx
frontend/src/app/export/: page.tsx
frontend/src/app/import/: importPage.module.scss  page.tsx
frontend/src/components/: AppNav.tsx  ClearDbButton.tsx  ErrorBox.module.css  ErrorBox.tsx  ImportWorkspace.tsx  Progress.module.css  Progress.tsx
frontend/src/features/employees/model/: constants.ts  helpers.ts  useEmployeesPage.ts
frontend/src/features/employees/ui/: EmployeeForm.tsx  EmployeesList.tsx  EmployeesPage.tsx  ReferencesPanel.tsx
frontend/src/lib/: api.ts  employeeValidation.ts  format.ts  types.ts
